assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=DynaPuff&family=Nunito:wght@200&display=swap');
*{
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: DynaPuff, cursive;
    font-weight: 300;
    color: #079997 
}
#logo {
    float: left;
    margin-right: 5%;
    margin-left: 20%;
}
#menu {
    font-size: 140%;
}
#menu, #logo {
    line-height: 75px;
}
#menu li {
    list-style-type: none;
    margin-right: 55px;
    margin-top: 55px;
    float: left;
    
}
/* navigation menu border */
.nav-box {
    border: none solid 4px;
    border-radius: 20%;
    padding: 4px;
    background-color: #fff;

}
#menu a {
    text-decoration: none;
    color: inherit
}
#menu a:hover {
    border-bottom: 4px solid #079997;
}
.active {
    border-bottom: 4px solid #079997;

}
#header-background {
    height: 200px;
    width: 100%;
    background: url(../images/20220818_212707_0001.png) center center;
}
hr {
    border: 1px solid #f6a4a6;
    width: 100%;
    margin: 5px 0;
}
 h1 {
    text-align: center;
    color: #676eb2;
    text-transform: uppercase;
}
/* first section of the Home page style */
#first-section {
    height: fit-content;
    display: flex;
    flex-direction: row;
    width: 80%;
    margin: auto;
    margin-top: 50px;
    gap: 40px;
}
#left-text {
    height: 100%;
}
#right-video {
    height: 100%;
}

#paragraph-box {
    font-family: Nunito, sans-serif;
    font-size: 150%;
    border: none;
    border-radius: 25px;
    padding: 10px;
    background-color: #676eb2;
    color:#fff;
    text-align: center;
    margin: 5%;

}
/*second section of the Home page */
#second-section {
    height: fit-content;
    display: flex;
    flex-direction: row;
    width: 80%;
    margin: auto;
    margin-top: 50px;
    gap: 40px; 
}
#left-text-box {
    font-family: Nunito, sans-serif;
    font-size: 150%;
    border: none;
    border-radius: 25px;
    background-color: #676eb2;
    color:#fff;
    text-align: center; 
    margin: 5%;
    padding: 20px;
}

#left-circle-container {
    width: 300px;
    height: 300px;
    padding: 30px;
    border-style: solid;
    border-color: #f6a4a6;
    border-width: 1px;
    border-radius: 50%;

}
#left-circle-cover {
    background: url(../images/circle-photo-2.jpg) no-repeat center center;
    height: 100%;
    border-radius: 50%;
}

/* third section of Home page */

#third-section {
    height: fit-content;
    display: flex;
    flex-direction: row;
    width: 80%;
    margin: auto;
    margin-top: 50px;
    gap: 40px; 
}

#right-circle-container {
    width: 300px;
    height: 300px;
    padding: 30px;
    border-style: solid;
    border-color: #f6a4a6;
    border-width: 1px;
    border-radius: 50%;
}
#right-text-box {
    font-family: Nunito, sans-serif;
    font-size: 150%;
    border: none;
    border-radius: 25px;
    padding: 20px;
    background-color: #676eb2;
    color:#fff;
    text-align: center; 
    margin: 5%;
}

#right-circle-cover {
    background: url(../images/circle-photo1.jpg) no-repeat center center;
    height: 100%;
    border-radius: 50%;
}
footer {
    height: 150px;
}
footer ul {
    text-align: center;
}
footer ul > li {
    display: inline;
}
footer i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #676eb2;
}
/* gallery */
#gallery {
    clear: both;
    line-height: 0;
    column-count: 4;
    column-gap: 0;
}
#gallery > img {
    width: 100%;
}
/* contact page */
.address-map {
    float: left;
    width: 100%;
}
#address {
    font-family: Nunito, sans-serif;
    font-size: 150%;
    border: none;
    border-radius: 25px;
    padding: 10px;
    background-color: #676eb2;
    color:#fff;
    text-align: center;
    margin: 5%;
    float: left;
    width: 45%
}
#map {
    float: right;
    width: 45%
}

